Rework of noMoviesInList, changes to 404 page and favicon
Made the no movies in list component generic. Moved types to the types folder. Added random and curated movie to show (configurable). Added helper function to generate a 'random' movie. Minor styling changes to accommodate the changes. Added favicon and basic meta tags to index.html

--- a/client/index.html
+++ b/client/index.html
@@ -1,13 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8" />
-        <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>u06 - movie list</title>
-    </head>
-    <body>
-        <div id="app"></div>
-        <script type="module" src="/src/main.ts"></script>
-    </body>
+
+<head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="robots" content="noindex, nofollow, noarchive, noimageindex" />
+    <meta content="light" name="color-scheme" />
+    <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico" sizes="64x64">
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg">
+    <title>MaybeMovies</title>
+</head>
+
+<body>
+    <div id="app"></div>
+    <script type="module" src="/src/main.ts"></script>
+</body>
+
 </html>
